compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__guard_string_concatenation_with_qualified_remote_constant.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\nimport mod\n\npub fn go(x) {\n  case x {\n    _ if \"Hello, \" <> mod.name <> \"!\" == \"\" -> Nil\n    _ -> Nil\n  }\n}\n"
---
----- SOURCE CODE

import mod

pub fn go(x) {
  case x {
    _ if "Hello, " <> mod.name <> "!" == "" -> Nil
    _ -> Nil
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(any()) -> nil.
go(X) ->
    _value = mod:name(),
    case X of
        _ when <<<<"Hello, "/utf8, _value/binary>>/binary, "!"/utf8>> =:= ~"" ->
            nil;

        _ ->
            nil
    end.
