compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__list_prepend.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\nconst wibble = [2, 3, 4]\npub const wobble = [0, 1, ..wibble]\n\npub fn main() {\n  wobble\n}\n"
---
----- SOURCE CODE

const wibble = [2, 3, 4]
pub const wobble = [0, 1, ..wibble]

pub fn main() {
  wobble
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0, wobble/0]).

-spec wobble() -> list(integer()).
wobble() ->
    [0, 1, 2, 3, 4].

-spec main() -> list(integer()).
main() ->
    [0, 1, 2, 3, 4].
