compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__list_prepend_from_other_module.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\nimport mod\n\npub const wobble = [0, 1, ..mod.wibble]\n\npub fn main() {\n  wobble\n}\n"
---
----- SOURCE CODE

import mod

pub const wobble = [0, 1, ..mod.wibble]

pub fn main() {
  wobble
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0, wobble/0]).

-spec wobble() -> list(integer()).
wobble() ->
    [0, 1 | mod:wibble()].

-spec main() -> list(integer()).
main() ->
    [0, 1 | mod:wibble()].
