compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__list_prepend_literal.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\npub const wibble = [0, 1, ..[2, 3, 4]]\n\npub fn main() {\n  wibble\n}\n"
---
----- SOURCE CODE

pub const wibble = [0, 1, ..[2, 3, 4]]

pub fn main() {
  wibble
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0, wibble/0]).

-spec wibble() -> list(integer()).
wibble() ->
    [0, 1, 2, 3, 4].

-spec main() -> list(integer()).
main() ->
    [0, 1, 2, 3, 4].
