compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__multiple_remote_constants_non_alphabetical_order.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\nimport mod\n\npub fn go(x) {\n  case x {\n    _ if x == mod.b -> \"b\"\n    _ if x == mod.a -> \"a\"\n    _ if x == mod.c -> \"c\"\n    _ -> \"dunno\"\n  }\n}\n"
---
----- SOURCE CODE

import mod

pub fn go(x) {
  case x {
    _ if x == mod.b -> "b"
    _ if x == mod.a -> "a"
    _ if x == mod.c -> "c"
    _ -> "dunno"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(integer()) -> binary().
go(X) ->
    _value = mod:a(),
    _value@1 = mod:b(),
    _value@2 = mod:c(),
    case X of
        _ when X =:= _value@1 ->
            ~"b";

        _ when X =:= _value ->
            ~"a";

        _ when X =:= _value@2 ->
            ~"c";

        _ ->
            ~"dunno"
    end.
